feat: add executable to generate photons emitted by a torch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ list(APPEND CMAKE_MODULE_PATH "$ENV{OPTICKS_HOME}/cmake/Modules")
 # Set up external dependencies
 find_package(Geant4 REQUIRED)
 find_package(g4cx REQUIRED)
+find_package(sysrap REQUIRED)
 
 add_subdirectory(src)
 
