add executable to run Geant4 simulation with OptiX

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,5 +25,8 @@ install(TARGETS g4ox EXPORT g4oxTargets
 add_executable(make_csg_tree make_csg_tree.cpp)
 target_link_libraries(make_csg_tree g4ox)
 
+add_executable(simg4ox simg4ox.cpp)
+target_link_libraries(simg4ox g4ox)
+
 add_executable(simtox simtox.cpp)
 target_link_libraries(simtox Opticks::SysRap)
