ci: review format with cpp-linter-action

--- a/.github/workflows/build-pull-request.yaml
+++ b/.github/workflows/build-pull-request.yaml
@@ -24,6 +24,7 @@ jobs:
           ignore: |
             include/argparse
           thread-comments: true
+          format-review: true
           tidy-checks: '-*'
 
       - name: Fail fast?!
