--- a/.github/workflows/build-pull-request.yaml
+++ b/.github/workflows/build-pull-request.yaml
@@ -37,7 +37,7 @@ jobs:
     runs-on: [gpu]
 
     container:
-      image: ghcr.io/bnlnpps/esi-shell:1.0.0
+      image: ghcr.io/bnlnpps/esi-shell:1.1.2-debug
       volumes:
         - /usr/local/optix:/usr/local/optix
       options: -i -t
