--- a/.github/workflows/build-pull-request.yaml
+++ b/.github/workflows/build-pull-request.yaml
@@ -57,6 +57,7 @@ jobs:
         env:
           GEOM: fakegeom
           OPTICKS_EVENT_MODE: DebugLite
+          OPTICKS_MAX_SLOT: 1000000
         run: |
           QCurandStateMonolithic_SPEC=3:0:0  $OPTICKS_PREFIX/lib/QCurandStateMonolithicTest
           mv $HOME/.opticks/rngcache/RNG/QCurandStateMonolithic_3M_0_0.bin $HOME/.opticks/rngcache/RNG/QCurandState_3000000_0_0.bin
