ci: use esi-shell@1.4.4-devel (#116)

--- a/.github/workflows/build-pull-request.yaml
+++ b/.github/workflows/build-pull-request.yaml
@@ -37,7 +37,7 @@ jobs:
     runs-on: [gpu]
 
     container:
-      image: ghcr.io/bnlnpps/esi-shell:1.2.2-debug
+      image: ghcr.io/bnlnpps/esi-shell:1.4.4-devel
       volumes:
         - /usr/local/optix:/usr/local/optix
       options: -i -t
@@ -57,11 +57,13 @@ jobs:
         env:
           GEOM: fakegeom
           OPTICKS_EVENT_MODE: DebugLite
+          OPTICKS_MAX_SLOT: 1000000
         run: |
-          QCurandState_SPEC=3:0:0 /usr/local/opticks/lib/QCurandStateTest
+          QCurandStateMonolithic_SPEC=3:0:0  $OPTICKS_PREFIX/lib/QCurandStateMonolithicTest
+          mv $HOME/.opticks/rngcache/RNG/QCurandStateMonolithic_3M_0_0.bin $HOME/.opticks/rngcache/RNG/QCurandState_3000000_0_0.bin
           build/src/simtox
           build/src/simg4ox -g geom/raindrop.gdml -m run.mac
-          ls -la /tmp/GEOM/fakegeom/simg4ox/ALL0/A000
-          ls -la /tmp/GEOM/fakegeom/simg4ox/ALL0/B000
+          ls -la /tmp/GEOM/fakegeom/simg4ox/ALL0_none/A000
+          ls -la /tmp/GEOM/fakegeom/simg4ox/ALL0_none/B000/f000
           python tests/compare_ab.py
           build/src/simg4ox -g geom/basic_detector.gdml -m run.mac
